[project]
name = "jumpavg"
version = "0.4.1"
description = "Library for locating changes in time series by grouping results."
authors = [
    { name = "Cisco Systems Inc. and/or its affiliates", email = "csit-dev@lists.fd.io" },
]
maintainers = [
    { name = "Vratko Polak", email = "vrpolak@cisco.com" },
    { name = "Tibor Frank", email = "tifrank@cisco.com" },
]
keywords = ["progression", "regression", "anomaly detection", "statistics", "bits" ]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
"Bug Tracker" = "https://jira.fd.io/projects/CSIT/issues"
"Source" = "https://gerrit.fd.io/r/gitweb?p=csit.git;a=tree;f=PyPI/jumpavg"
